Submit Site Attendance for 22dec to 31Dec

--- a/Web.config
+++ b/Web.config
@@ -6,14 +6,14 @@
 <configuration>
   
   <appSettings>
-    <add key="PageNoProvider" value="True" />
+    <add key="PageNoProvider" value="False" />
     <add key="PageSizeProvider" value="True" />
     <add key="EditAllowedDays" value="31" />
     <add key="FPRegularizeInDays" value="3" />
     <add key="allowedList" value="*" />
     <add key="LocationWiseCardPunchDate" value="09/04/2012" />
-    <add key="AtchDir" value="D:\App_Vault\Attendance"/>
-    <add key="AtchDir1" value="C:\Temp"/>
+    <add key="AtchDir" value="D:\App_Vault\Attendance" />
+    <add key="AtchDir1" value="C:\Temp" />
   </appSettings>
   <connectionStrings>
     <remove name="AspNetDBConnection" />
@@ -21,9 +21,9 @@
     <add name="-AspNetDBConnection" connectionString="Data Source=.\LGSQL;Initial Catalog=IJTPerks;Integrated Security=False;User Instance=False;User ID=sa;Password=isgec12345" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
-    <compilation debug="true" strict="false" explicit="true" targetFramework="4.0" >
+    <compilation debug="true" strict="false" explicit="true" targetFramework="4.0">
       <codeSubDirectories>
-        <add directoryName="ATN"/>
+        <add directoryName="ATN" />
       </codeSubDirectories>
     </compilation>
     <authentication mode="Forms">
@@ -100,6 +100,10 @@
   <system.webServer>
     <modules runAllManagedModulesForAllRequests="true" />
     <handlers>
+            <add name="V4.0-64" path="*.rptx" verb="*" modules="IsapiModule" scriptProcessor="%windir%\Microsoft.NET\Framework64\v4.0.30319\aspnet_isapi.dll" resourceType="Unspecified" requireAccess="Read" preCondition="classicMode,runtimeVersionv4.0,bitness64" />
+            <add name="V2.0-64" path="*.rptx" verb="*" modules="IsapiModule" scriptProcessor="%windir%\Microsoft.NET\Framework64\v2.0.50727\aspnet_isapi.dll" resourceType="Unspecified" preCondition="classicMode,runtimeVersionv2.0,bitness64" />
+            <add name="V4.0" path="*.rptx" verb="*" modules="IsapiModule" scriptProcessor="%windir%\Microsoft.NET\Framework\v4.0.30319\aspnet_isapi.dll" resourceType="Unspecified" preCondition="classicMode,runtimeVersionv4.0,bitness32" />
+            <add name="v2.0" path="*.rptx" verb="*" modules="IsapiModule" scriptProcessor="%windir%\Microsoft.NET\Framework\v2.0.50727\aspnet_isapi.dll" resourceType="Unspecified" preCondition="classicMode,runtimeVersionv2.0,bitness32" />
         <add name="LGM-rptx" path="*.rptx" verb="*" type="SIS.SYS.Utilities.rptxHandler" resourceType="Unspecified" preCondition="integratedMode" />
     </handlers>
   </system.webServer>
@@ -123,9 +127,7 @@
       </basicHttpBinding>
     </bindings>
     <client>
-      <endpoint address="http://192.9.200.150/WebHRAdm1/app_services/wswebhradm1.asmx"
-        binding="basicHttpBinding" bindingConfiguration="wsWebHrAdm1Soap"
-        contract="HRISEvents.wsWebHrAdm1Soap" name="wsWebHrAdm1Soap" />
+      <endpoint address="http://192.9.200.150/WebHRAdm1/app_services/wswebhradm1.asmx" binding="basicHttpBinding" bindingConfiguration="wsWebHrAdm1Soap" contract="HRISEvents.wsWebHrAdm1Soap" name="wsWebHrAdm1Soap" />
     </client>
   </system.serviceModel>
 </configuration>
