New LMS Policy from 2021

--- a/Web.config
+++ b/Web.config
@@ -12,9 +12,10 @@
     <add key="FPRegularizeInDays" value="3" />
     <add key="allowedList" value="*" />
     <add key="LocationWiseCardPunchDate" value="09/04/2012" />
-    <add key="AtchDir" value="D:\App_Vault\Attendance" />
+    <add key="AtchDir" value="F:\App_Vault\Attendance" />
     <add key="AtchDir1" value="C:\Temp" />
     <add key="Admin" value="0340,2324,2813" />
+    <add key="Demo" value="False"/>
   </appSettings>
   <connectionStrings>
     <remove name="AspNetDBConnection" />
