CR865-Provision to raise TA Bill approver change request

--- a/Web.config
+++ b/Web.config
@@ -1,10 +1,9 @@
-<?xml version="1.0" encoding="UTF-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
-  
   <appSettings>
     <add key="PageNoProvider" value="False" />
     <add key="PageSizeProvider" value="True" />
@@ -15,7 +14,8 @@
     <add key="AtchDir" value="F:\App_Vault\Attendance" />
     <add key="AtchDir1" value="C:\Temp" />
     <add key="Admin" value="0340,2324,2813" />
-    <add key="Demo" value="False"/>
+    <add key="Demo" value="False" />
+    <add key="ODSanctionRequired" value="False" />
   </appSettings>
   <connectionStrings>
     <remove name="AspNetDBConnection" />
@@ -27,6 +27,9 @@
       <codeSubDirectories>
         <add directoryName="ATN" />
       </codeSubDirectories>
+      <assemblies>
+        <add assembly="System.Net.Http, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B03F5F7F11D50A3A" />
+      </assemblies>
     </compilation>
     <authentication mode="Forms">
       <forms loginUrl="Login.aspx" protection="None" timeout="50" />
@@ -43,8 +46,7 @@
         <add connectionStringName="AspNetDBConnection" name="AspNetSqlRoleProvider" type="system.Web.Security.SqlRoleProvider" />
       </providers>
     </roleManager>
-    <sessionState cookieless="UseDeviceProfile" timeout="60">
-    </sessionState>
+    <sessionState cookieless="UseDeviceProfile" timeout="60" />
     <customErrors mode="RemoteOnly" />
     <identity impersonate="false" />
     <authorization>
@@ -80,16 +82,13 @@
         <add tagPrefix="LGM" tagName="LC_hrmDivisions" src="~/ATN_Main/APP_FKControls/LC_hrmDivisions.ascx" />
         <add tagPrefix="LGM" tagName="LC_hrmDepartments" src="~/ATN_Main/APP_FKControls/LC_hrmDepartments.ascx" />
         <add tagPrefix="LGM" tagName="LC_hrmDesignations" src="~/ATN_Main/APP_FKControls/LC_hrmDesignations.ascx" />
-
         <add tagPrefix="LGM" tagName="LC_taTPInvoicing" src="~/TA_Main/APP_FKControls/LC_taTPInvoicing.ascx" />
         <add tagPrefix="LGM" tagName="LC_taCategories" src="~/ATN_Main/APP_FKControls/LC_taCategories.ascx" />
-        
         <add tagPrefix="LGM" tagName="LC_atnSAStatus" src="~/ATN_Main/APP_FKControls/LC_atnSAStatus.ascx" />
         <add tagPrefix="LGM" tagName="LC_atnSABySI" src="~/ATN_Main/APP_FKControls/LC_atnSABySI.ascx" />
         <add tagPrefix="LGM" tagName="LC_UpdateAttendance" src="~/ATN_Main/APP_Controls/LC_UpdateAttendance.ascx" />
         <add tagPrefix="LGM" tagName="LC_UpdateSAAttendance" src="~/ATN_Main/APP_Controls/LC_UpdateSAAttendance.ascx" />
         <add tagPrefix="LGM" tagName="LC_WFHConfig" src="~/ATN_Main/APP_FKControls/LC_WFHConfig.ascx" />
-
       </controls>
     </pages>
   </system.web>
@@ -130,16 +129,14 @@
       </basicHttpBinding>
     </bindings>
     <client>
-      <endpoint address="http://192.9.200.150/WebHRAdm1/app_services/wswebhradm1.asmx"
-        binding="basicHttpBinding" bindingConfiguration="wsWebHrAdm1Soap"
-        contract="HRISEvents.wsWebHrAdm1Soap" name="wsWebHrAdm1Soap" />
+      <endpoint address="http://192.9.200.150/WebHRAdm1/app_services/wswebhradm1.asmx" binding="basicHttpBinding" bindingConfiguration="wsWebHrAdm1Soap" contract="HRISEvents.wsWebHrAdm1Soap" name="wsWebHrAdm1Soap" />
     </client>
   </system.serviceModel>
   <system.web.extensions>
     <scripting>
       <webServices>
         <!-- Update this value to set the max length -->
-        <jsonSerialization  maxJsonLength="2147483647" />
+        <jsonSerialization maxJsonLength="2147483647" />
       </webServices>
     </scripting>
   </system.web.extensions>
