--- a/Web.config
+++ b/Web.config
@@ -19,7 +19,7 @@
   </appSettings>
   <connectionStrings>
     <remove name="AspNetDBConnection" />
-    <add name="AspNetDBConnection" connectionString="Data Source=192.9.200.150;Initial Catalog=IJTPerks;Integrated Security=False;User Instance=False;Persist Security Info=True;User ID=sa;Password=isgec12345" providerName="System.Data.SqlClient" />
+    <add name="AspNetDBConnection" connectionString="Data Source=perk03;Initial Catalog=IJTPerks;Integrated Security=False;User Instance=False;Persist Security Info=True;User ID=sa;Password=isgec12345" providerName="System.Data.SqlClient" />
     <add name="-AspNetDBConnection" connectionString="Data Source=.\LGSQL;Initial Catalog=IJTPerks;Integrated Security=False;User Instance=False;User ID=sa;Password=isgec12345" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
@@ -129,7 +129,7 @@
       </basicHttpBinding>
     </bindings>
     <client>
-      <endpoint address="http://192.9.200.150/WebHRAdm1/app_services/wswebhradm1.asmx" binding="basicHttpBinding" bindingConfiguration="wsWebHrAdm1Soap" contract="HRISEvents.wsWebHrAdm1Soap" name="wsWebHrAdm1Soap" />
+      <endpoint address="http://perk03/WebHRAdm1/app_services/wswebhradm1.asmx" binding="basicHttpBinding" bindingConfiguration="wsWebHrAdm1Soap" contract="HRISEvents.wsWebHrAdm1Soap" name="wsWebHrAdm1Soap" />
     </client>
   </system.serviceModel>
   <system.web.extensions>
